--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 
 <body>
-<div><p>DROGA POŻAROWA NIE ZASTAWIAĆ</p></div>
-<img src="1.png" alt="Znak drogowy">
+<div id="a">DROGA POŻAROWA NIE ZASTAWIAĆ</div>
+<div id="b"></div>
 </body></html>
-/n
