--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE HTML><html lang=pl><head>
-<title>Lekcja14</title>
+<title>Znaki</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="styl.css">
 <meta charset="UTF-8" />
 </head>
 
 <body>
-  <div id="a">DROGA POŻAROWA NIE ZASTAWIAĆ</div></br>
-<div id="b"></div>
+<div id="a">DROGA POŻAROWA NIE ZASTAWIAĆ</div></br>
+<div id="b"></div></br>
+<div id="c"><div id="c2"> </div></div></br>
+<div id="d"><center>601</center></div>
 </body></html>
